# Vision-Transformer

./: MIREA_4_VIT.ipynb  README.md  enviroment.yml  pyproject.toml
VIT_project/: __init__.py  config.py  data.py  model.py  training.py
