[project]
name = "homework-4-vit-mrderyf"
version = "0.1.0"
description = ""
authors = [{ name = "Fedor Shadaev", email = "shadaevf@mail.ru" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = ["torch (>=2.8.0,<3.0.0)", "torchvision (>=0.23.0,<0.24.0)", "wandb (>=0.21.1,<0.22.0)", "einops (>=0.8.1,<0.9.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
